--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "express",
     "locomotive",
     "tetra",
-    "viadeo"
+    "viadeo",
+    "convict",
+    "config"
   ],
   "repository": {
     "type": "git",
@@ -35,10 +37,10 @@
     "grunt": "~0.4.4",
     "load-grunt-config": "~0.7.2",
     "grunt-contrib-jshint": "~0.9.2",
-    "grunt-mocha-test": "~0.9.4",
+    "grunt-mocha-test": "~0.10.0",
     "grunt-jsbeautifier": "~0.2.6",
-    "chai": "~1.9.0",
-    "mocha": "~1.18.0"
+    "chai": "~1.9.1",
+    "mocha": "~1.18.2"
   },
   "engines": {
     "node": ">= 0.10.0"
