--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "main": "./lib",
   "scripts": {
+    "test": "mocha",
     "istanbul": "istanbul cover _mocha test/**/*.test.js"
   },
   "dependencies": {
