--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-mocha-test": "~0.11.0",
     "grunt-jsbeautifier": "~0.2.7",
-    "chai": "~1.9.1",
-    "mocha": "~1.20.1"
+    "chai": "*",
+    "mocha": "*"
   },
   "engines": {
     "node": ">= 0.10.0"
